Clarity Build: [UI] Alerts overflow bug fix http://github.com/vmware/clarity/commit/c3014da6da6b7a38ba3c36241355b8f9db3bb71a:

--- a/clr-ui-dark.css
+++ b/clr-ui-dark.css
@@ -4044,6 +4044,9 @@ html {
 .alert-icon-wrapper {
   -ms-flex: 0 0 1.041667rem;
   flex: 0 0 1.041667rem;
+  -ms-flex-item-align: start;
+  -ms-grid-row-align: start;
+  align-self: start;
   padding-top: 0.041667rem;
   height: 0.75rem; }
 
@@ -4183,7 +4186,6 @@ html {
   margin: 0;
   border: none;
   border-radius: 0;
-  max-height: 4rem;
   overflow-y: auto;
   background: #49afd9;
   color: #000;
@@ -4227,8 +4229,10 @@ html {
       margin: 0; }
   .alert-app-level .alert-item > span,
   .alert-app-level .alert-text {
-    -ms-flex: 0 0 auto;
-    flex: 0 0 auto; }
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto; }
+  .alert-app-level .alert-icon-wrapper {
+    margin-top: 0.125rem; }
   .alert-app-level .close {
     color: #000;
     opacity: 0.8;
